--- a/web/index.html
+++ b/web/index.html
@@ -37,6 +37,7 @@
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer=""></script>
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest" type="application/javascript"></script>
+  <script src="main.dart.js" type="application/javascript"></script>
   
   
   
