--- a/web/index.html
+++ b/web/index.html
@@ -25,7 +25,9 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png">
+  <!-- <link rel="icon" type="image/png" href="favicon.png"> -->
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 
   <title>kimjuhyeonbykak</title>
   <link rel="manifest" href="manifest.json">
@@ -54,6 +56,12 @@
   
   
   
+  
+  
+  
+  
+  
+  
   <style id="splash-screen-style">
     html {
       height: 100%
@@ -62,7 +70,7 @@
     body {
       margin: 0;
       min-height: 100%;
-      background-color: #1E1E1E;
+      background-color: #1e1e1e;
           background-size: 100% 100%;
     }
 
@@ -127,6 +135,8 @@
       <source srcset="splash/img/dark-1x.png 1x, splash/img/dark-2x.png 2x, splash/img/dark-3x.png 3x, splash/img/dark-4x.png 4x" media="(prefers-color-scheme: dark)">
       <img class="center" aria-hidden="true" src="splash/img/light-1x.png" alt="">
   </picture>
+  
+  
   
   
   
