--- a/web/index.html
+++ b/web/index.html
@@ -22,6 +22,12 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="kimjuhyeonbykak">
+  <meta property="og:title" content="김주현바이각">
+  <meta name="author" content="Designer">
+  <meta property="og:type" content="website">
+  <meta property="og:image" id="urlThumb" content="https://github.com/this-is-yello/kimjuhyeonbykak/blob/main/assets/images/splash_logo.png?raw=true">
+  <meta property="og:description" content="전통과 정통을 바느질하다.">
+  <meta name="keywords" content="테일러샵, 테일러아카데미, 수트렌탈센터, 남성정장, 맞춤정장, 맞춤예복, 인천맞춤정장, 인천맞춤예복, 김주현바이각">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
